...
    <string name="navigation_drawer_close">Close navigation drawer</string>

    --MainActivity Strings--
    <string name="encouraging_quote_default">You\'re moments away from beginning\nyour journey towards a more \nproductive you</string>
    <string name="beginButton">BEGIN</string>

    <string name="error_til_add_task">Enter a task name</string>
    <string name="negative_btn_save">Save</string>
    <string name="positive_btn_edit">Edit</string>
    <string name="menuitem_tasks">Tasks</string>
    <string name="menuitem_pomodoro">Pomodoro</string>
    <string name="menuitem_tenminute">10-Minute Hack</string>
    <string name="tv_due_date">Tap to set due date</string>
    <string name="tv_time_left_unset">Tap to edit details</string>
    <string name="notification_title">Timer is up!</string>
...
