<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintAnimationEnabled="false">

        <EditText
            android:id="@+id/etAddTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_add_task"
            android:inputType="textCapSentences|textNoSuggestions"
            android:textColor="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>